# kisco-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LASTFM_INTEGRATION.md  PROGRESS.md  README.md  SPOTIFY_API.md  fly.toml  pyproject.toml
app/: config.py  constants.py  db.py  lastfm_adapter.py  lastfm_for_user.py  main.py  models.py  play_normalizer.py  poller.py  spotify_adapter.py  spotify_for_user.py
app/providers/: __init__.py  base.py  lastfm.py  spotify.py
app/routes/: auth.py  stats.py  users.py
tests/: init_db.py  list_users.py  print_auth_url.py  smoke_db.py  smoke_lastfm.py  smoke_poller.py  smoke_spotify.py  smoke_wrapper.py  test_lastfm_sign.py
