[project]
name = "kisco-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.14.0",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]
